<resources>
    <string name="app_name">Everest Valuator App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="token">Token</string>
    <string name="requestid">Request Id</string>
    <string name="branch_name">Branch Name:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="contact_person">Contact Person:</string>
    <string name="collateral_type">Collateral Type:</string>
    <string name="collateral_owner_name">Collateral Owner Name:</string>
    <string name="collateralAddress">Collateral Address:</string>
    <string name="remarks">Remarks:</string>
    <string name="file_upload">File Upload</string>
    <string name="remarks_hint">Enter remarks here</string>
    <string name="remarks_label_required">Remarks: <font color="#FF0000">*</font></string>
    <string name="save">Verify</string>
    <string name="submit">Submit</string>
    <string name="developed_by_sb_solutions_nepal_pvt_ltd">Powered by SB Solutions Nepal Pvt. Ltd.</string>
    <string name="successfully_submitted">Successfully Submitted!</string>
    <string name="ok">OK</string>

</resources>