<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <!-- TextView to display Branch Name -->
    <TextView
        android:id="@+id/branchNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_name"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- TextView to display Contact Person -->
    <TextView
        android:id="@+id/contactNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/branchNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/contactPersonNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_person"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/contactNumberTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/collateralTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collateral_type"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/contactPersonNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/collateralOwnerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collateral_owner_name"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/collateralTypeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/collateralAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collateralAddress"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/collateralOwnerNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
    <!-- TextView for Remarks Label -->
    <TextView
        android:id="@+id/remarksLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarks_label_required"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/collateralAddressTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <!-- EditText for Remarks -->
<!--    <EditText-->
<!--        android:id="@+id/remarksEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/remarksTextView"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="8dp"/>-->
    <!-- EditText for Remarks -->
    <EditText
        android:id="@+id/remarksEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remarks_hint"
        app:layout_constraintTop_toBottomOf="@id/remarksLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>


    <!-- Button for File Upload -->
    <Button
        android:id="@+id/fileUploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_upload"
        app:layout_constraintTop_toBottomOf="@id/remarksEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


</android.support.constraint.ConstraintLayout>
