<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRLContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3242c"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/idIVLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/requestIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idIVLogo"
        android:layout_margin="16dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/requestid"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/tokenEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestIdEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/token"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tokenEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C66647"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/companyInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/developed_by_sb_solutions_nepal_pvt_ltd"
        android:textColor="@android:color/white" />

</RelativeLayout>
